    whether the fit converges.
  - If two diffusion time parameter exist in a model, always
    make sure that one parameter is the larger one. This
    feature can currently not be disabled (#110).
- Allow infinity ("inf" and "-inf") parameters for models
  and boundaries.
- New model: confocal T+T+3D+3D
- Bugfixes:
  - Sessions saved with 64bit Windows were not opened (#136)
0.9.2
- Bugfixes:
  - "Slider Simulation"/"Parm Range" broken (#133)
  - Computation of average intensity did not work
    correctly for unequally spaced traces
- Update .pt3 reader to version 8399ff7401
- Import traces of .pt3 files (#118)
  Warning: Absolute values for intensity might be wrong
0.9.1
- Tool 'Overlay curves': improve UI (#117)
- Tool 'Statistics view': improve UI (#113)
- Tool 'Trace view': display countrate (#121)
- Bugfixes:
  - Unicode errors in statistics tool (#131)
  - Load session errors with empty pages
0.9.0
- Improve parameter display (#52, #114)
- Display Chi2 on each page (#115)
- The displayed Chi2-value for non-weighted fits is now
  normalized to the expected values of the fit. The
  documentation has been updated accordingly.
- Add "All files" option in save dialogs (#97)
- Improved plot export dialog (#99)
0.8.9
- Improved support for "ALV-7004" files (#104)
- Increase resolution for image export
- Load weights from PyCorrFit csv files 
- Tool 'Overlay Curves': show cropped correlation curves
- Tool 'Trace view': increase size of window (#93)
- Tool 'Global fitting': remove forced, joint weights
- Session comment dialog: more intuitive behavior (#116)
- Improve plot export (#95)
- Bugfixes:
   - Weighted fits at borders of fit interval were
     computed incorrectly due to integer division
   - Fitting algorithms did not work (#94)
   - Creating averages did not work (#123)
   - ASCII errors in statistics tool (#112)
- Under the hood:
   - Introduce new classes: Correlation, Fit, Trace
   - Code cleanup and rewrite to support planned features